# sheer

./: CMakeLists.txt  README.md
include/sheer/: BaseTypes.hpp  Event.hpp  Float16.hpp  Float16Converter.hpp  Hash.hpp  HepObject.hpp  LorentzVector.hpp  Particle.hpp  ShortString.hpp  ValueMap.hpp  Variant.hpp
scripts/: CMakeLists.txt  generate.py
src/: Float16Converter.cpp  Hash.cpp  ShortString.cpp
tests/: CMakeLists.txt  test.cpp
